<resources>
    <string name="app_name">Dahlia</string>
    <string name="ReceiverNameView">Receiver Name :</string>
    <string name="getRname" />
    <string name="ReceiverAdressView">Address :</string>
    <string name="getRaddress" />
    <string name="ReceiverEmailView">Email :</string>
    <string name="getRemail" />
    <string name="ReceiverContactView">Contact No :</string>
    <string name="getRcontact" />
    <string name="OrderConfirm">Confirm</string>
    <string name="ORDCharge">Delivery Charge :</string>
    <string name="ORDAmount">Discount Amount :</string>
    <string name="ORSTotal">Sub Total :</string>
    <string name="ORTAmount">Total Amount :</string>
    <string name="OROCancel">Cancel</string>
    <string name="ORgetCharge" />
    <string name="ORgetDAmount" />
    <string name="ORgetSubTot" />
    <string name="ORgetTotAmount" />
    <string name="CDCardNumber" />
    <string name="CDExpiry" />
    <string name="CDSaveCardDet">Save my card details for faster payments</string>
    <string name="PContinue">Continue</string>
    <string name="PTotalValue">0</string>
    <string name="RDFirstName" />
    <string name="RDLastName" />
    <string name="RDAddress" />
    <string name="RDEmail" />
    <string name="RDContactNo" />
    <string name="PTCash" />
    <string name="PTCard" />
    <string name="SCDcardNumber" />
    <string name="SCDexpiry" />
    <string name="SCDcvc" />
    <string name="SCDCancelbtn">Cancel</string>
    <string name="SCDSavebtn">Save</string>
    <string name="ReceiverPaymentType">Payment Type :</string>
    <string name="getRpayType" />
    <string name="SCDCDeletebtn">Delete</string>
    <string name="getQuantity" />
    <string name="getDressname" />
    <string name="getDresscolor" />
    <string name="getDresssize" />
    <string name="getDressprice" />
    <string name="getDressquantity" />
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_side_navigation_bar">side_navigation_bar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_categories">CATEGORIES</string>
    <string name="menu_cart">CART</string>
    <string name="menu_wishlist">WiISH LIST</string>
    <string name="menu_yourorders">YOUR ORDERS</string>
    <string name="menu_refund">REFUND</string>
    <string name="menu_feedbacks">FEEDBACKS</string>
    <string name="menu_myaccount">MY ACCOUNT</string>
    <string name="btn_offersbtn">OFFERS</string>
    <string name="solid_color_tie_up_dress">solid color tie up dress</string>
    <string name="white_front_tied_linen_dress">white front tied linen dress</string>
    <string name="view_more">VIEW MORE</string>
    <string name="btn_catdresses">DRESSES</string>
    <string name="btn_cattops">TOPS</string>
    <string name="btn_cattshirts">T-SHIRTS</string>
    <string name="btn_catshortsjeans"><![CDATA[SHORT & JEANS]]></string>
    <string name="btn_catnightwear">NIGHT WEAR</string>
    <string name="btn_catoffers">OFFERS</string>
    <string name="btn_catnewarrivals">NEW ARRIVALS</string>
    <string name="txt_dress13">"Light Blue Strappy Denim Dress "</string>
    <string name="txt_dress13p">LKR 2375</string>
    <string name="txt_dress14">Halter Neck Mini Dress By Coco</string>
    <string name="txt_dress14p">LKR 1495</string>
    <string name="txt_dress10">Yellow Mini Dress</string>
    <string name="txt_dress10p">LKR 1950/=</string>
    <string name="txt_dress11">White cliara short dress</string>
    <string name="txt_dress11p">LKR 2000</string>
    <string name="txt_dress12p">LKR 2000</string>
    <string name="txt_dress12">White Pleated Short Dress</string>
    <string name="txt_dress15">floral printed mini dress</string>
    <string name="txt_dress15p">LKR 3500</string>
    <string name="txt_dress13name">Light Blue Strappy Denim Dress | code DS502</string>
    <string name="txt_dress13price">LKR 2375/=</string>
    <string name="txt_dress13size">SIZE</string>
    <string name="btn_dress13XS">XS</string>
    <string name="txt_dress13color">COLOR :</string>
    <string name="itemDelete">Delete</string>

    <string name="app_name1">google</string>
    <string name="app_name2">facebook</string>
    <string name="app_name3">inster</string>
    <string name="startbtn">Get Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_login">Email</string>
    <string name="Password_login">Password</string>
    <string name="Btnlogin">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="name_reg">Full Name</string>
    <string name="email_reg">Email</string>
    <string name="Password_reg">Password</string>
    <string name="RePassword_reg">Re-Enter Password</string>
    <string name="Btnreg">Register</string>
    <string name="getStartbtn">Get Started</string>
    <string name="TextView">Jessica Wang</string>
    <string name="email">jessica99@gmail.com</string>
    <string name="textview">Wish List</string>
    <string name="textviewBag">My Bag</string>
    <string name="textviewOrder">Orders</string>
    <string name="Gender">Gender</string>
    <string name="Female">Female</string>
    <string name="Phone">Phone</string>
    <string name="Phone2">0768457956</string>
    <string name="Birth">Birthday</string>
    <string name="bdate">1999/04/03</string>
    <string name="Address">Address</string>
    <string name="Add">2A Colombo Sri Lanka</string>
    <string name="Addr">22A Flower Road, Colombo,Sri Lanka</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="gender">Female</string>
    <string name="save_update">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="upper_text">10% OFF FOR NEW USERS</string>
    <string name="full_name">Full Name</string>
    <string name="emailAdd">Email</string>

    <string-array name="gender">
        <item>Female</item>
        <item>male</item>
    </string-array>


    <string name="feedback_text">"We, ‘Dahlia’ team want to give  you an excellent service !  Give us your feedback to improve our service ! "</string>
    <string name="add_feedback">Add feedback</string>
    <string name="my_comments">My comments</string>
    <string name="refund_home_text">" Here’s everything  you need to  know if  something  goes wrong  with an order or  if you change  your mind and  doesn’t want the  item anymore."</string>
    <string name="new_refund">new refund</string>
    <string name="my_refunds">my refunds</string>
    <string name="update_comments">Comments</string>
    <string name="update_comments_btn">update</string>
    <string name="add_feedback_text1">Give us your feedback here!</string>
    <string name="des_logo" />
    <string name="purchased_date_text">Purchased Date</string>
    <string name="refund_type_text">Refund type</string>
    <string name="mycomment_txt">My comments</string>
    <string name="addnewcommtext">Add a new comment</string>
    <string name="confirmCommBtn">confirm</string>
    <string name="txtComment1" />
    <string name="txtComment2" />
    <string name="txtPurchDate">Purchased Date</string>
    <string name="typing_msg">Comment here!</string>
    <string name="img_logo" />
    <string name="updateComment" />
    <string name="update_comment">Update your comment here!</string>
    <string name="BgaddCom" />
    <string name="txtPurchaseType">Purchase Type</string>
    <string name="txtproCode">Product code</string>
    <string name="txtproname">Product name</string>
    <string name="txtreason">Reason to return</string>
    <string name="btnSubmit">Submit</string>
    <string name="imgbg" />
    <string name="hdAddref">Request for a refund</string>
    <string name="txtPurchDateV">Purchased Date</string>
    <string name="txtPurchaseTypeV">Purchase Type</string>
    <string name="txtpronameV">Product name</string>
    <string name="TxtpurchDateadd">Puchased Date</string>
    <string name="txtimgbox" />
    <string name="bgImageUpdate" />
    <string name="textViewRefundDetails">Refund Details</string>
    <string name="txtproefAmount">Refund Amount</string>
    <string name="PurchasedDateT">Purchased Date</string>
    <string name="PurchaseTypeT">"Purchase Type "</string>
    <string name="feedbacks">FEEDBACKS</string>
    <string name="addfeedback">ADD BACKFEED</string>
    <string name="feedbackadd">ADD FEEDBACK</string>
    <string name="mycomments">MY COMMENTS</string>
    <string name="myrefunds">MY REFUNDS</string>
    <string name="addrefund">ADD REFUND</string>
    <string name="refunds">REFUNDS</string>
    <string name="newrefund">NEW REFUND</string>
    <string name="Rate">RATE</string>
    <string name="btnDelete">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="updateComments">UPDATE COMMENTS</string>
</resources>