<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1B4B4"
    tools:context=".add_feedbacks">

    <ImageView
        android:id="@+id/BgaddCom"
        android:layout_width="741dp"
        android:layout_height="1074dp"
        android:alpha="0.8"
        android:background="#535050"
        android:contentDescription="@string/BgaddCom"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.494"
        app:srcCompat="@drawable/bgaddcom" />
    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="#DFDFDF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="#DFDFDF"
            app:srcCompat="@drawable/backarrow"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/feedbacks"
            android:layout_width="227dp"
            android:layout_height="match_parent"
            android:background="#DFDFDF"
            android:fontFamily="@font/athiti_medium"
            android:gravity="center"
            android:text="@string/feedbackadd"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:background="#DFDFDF"
            app:srcCompat="@drawable/search"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="#DFDFDF"
            app:srcCompat="@drawable/profile"
            tools:ignore="VectorDrawableCompat" />

    </TableRow>
    <TextView
        android:id="@+id/txtFeedbackHeading"
        android:layout_width="225dp"
        android:layout_height="26dp"
        android:layout_marginTop="180dp"
        android:text="@string/add_feedback_text1"
        android:textColor="#131111"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBarFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFeedbackHeading"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/Rate"
        app:backgroundTint="#535050"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarFeedback" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="381dp"
        android:background="@drawable/rect"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/txtmy_comments"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/mycomment_txt"
        android:textColor="#F6F4F4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/confirmCommBtn"
        app:backgroundTint="#9C9C9C"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextComment"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/txt_newcomment"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/addnewcommtext"
        android:textColor="#F6F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmy_comments" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#F8F1F1"
        android:ems="10"
        android:hint="@string/typing_msg"
        android:inputType="textPersonName"
        android:textColor="#F8F1F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_newcomment"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="407dp"
        android:layout_height="258dp"
        android:contentDescription="@string/img_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/black3x" />

</androidx.constraintlayout.widget.ConstraintLayout>